--- a/Computer Vision/cifar10.ipynb
+++ b/Computer Vision/cifar10.ipynb
@@ -145,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "273/350 [======================>.......] - ETA: 6:13 - loss: 2.3434 - accuracy: 0.1015"
+      "284/350 [=======================>......] - ETA: 5:26 - loss: 2.3419 - accuracy: 0.1016"
      ]
     }
    ],
