--- a/Computer Vision/mnist.ipynb
+++ b/Computer Vision/mnist.ipynb
@@ -105,6 +105,20 @@
      "text": [
       "2023-06-04 23:51:36.407584: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 37632000 exceeds 10% of free system memory.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> 11.442\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-06-04 23:56:02.015304: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 37632000 exceeds 10% of free system memory.\n"
+     ]
     }
    ],
    "source": [
